# awsdx-hackathon

./: Dockerfile.superset  README.md  meltano.yml  meltano_stacktrace.txt  my-catalog.json  pyproject.toml  requirements-analysis.txt  requirements.txt
.meltano/: analytics.json  meltano.db
.meltano/run/: bin
.meltano/run/superset/: superset_config.py
.meltano/run/tap-spreadsheets-anywhere/: state.json  tap.properties.cache_key  tap.properties.json
.meltano/utilities/superset/: superset.db
app/: config.py  eda.py  geodata_to_parquet.py  load_emp_spending.py  logger.py  logging_config.yaml  tiling.py
awsdx-hackathon/: eda.py
notebooks/: Joining data.ipynb  dbnomics-data.ipynb  geodata.ipynb  load-data-db.ipynb
transform/: dbt_project.yml
transform/models/: hub_map.sql  stg_long_lat.sql  stg_opp_atlas.sql  stg_zillow_idx.sql  stg_zip_tract.sql
transform/profiles/duckdb/: profiles.yml
