[tool.poetry]
name = "awsdx-hackathon"
version = "0.1.0"
description = "My submission for the AWSDX 2022 hackathon"
authors = ["Evan Azevedo <evan@azevedo.com>"]
readme = "README.md"
packages = [{include = "awsdx_hackathon"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.5.1"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
pyarrow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
